--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,8 @@ body {
 
 .overflow-x-auto::-webkit-scrollbar-thumb:hover {
   background: rgba(0, 0, 0, 0.4);
+}
+
+.avatar-jump-transition {
+  transition: bottom 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 } 
